# neural-speed-academy

./: .gitignore  .~lock.NSA path1.odt#  .~lock.nsa_adam_20260528.csv#  CHANGELOG.md  GIT_QUICKREF.md  LICENSE  NSA path1.odt  README.md  RESEARCH_LINKS.md  build_exe.bat  nsa.py  nsa_adam_20260528.csv  nsa_adam_20260528.json  pyproject.toml  renovate.json
.github/: FUNDING.yml
.ona/review/: comments.json
neural_speed_academy/: audio.py  config.py  i18n.py  state.py  theme.py
neural_speed_academy/exercises/: base.py  chunking.py  flash.py  mot.py  pacer.py  peripheral_flash.py  priming.py  rapid_decision.py  reaction_time.py  recall.py  rsvp.py  schulte.py  sequence_memory.py  slide_processing.py  spaced_repetition.py  split_attention.py  text_library_widget.py
neural_speed_academy/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json
neural_speed_academy/navigation/: navigator.py
neural_speed_academy/repositories/: base.py  slide_repository.py  user_repository.py
neural_speed_academy/research/: __init__.py
neural_speed_academy/screens/: base.py  dashboard_screen.py  introduction_screen.py  language_screen.py  login_screen.py  main_menu_screen.py  menu_screens.py  path_session_screen.py  paths_screen.py  settings_screen.py  slide_creator_screen.py  stats_screen.py
neural_speed_academy/slides/: __init__.py  slides_de.py  slides_en.py  slides_es.py  slides_fr.py  slides_it.py  slides_pt.py
tests/: TESTPLAN.md
