[project]
name = "neural-speed-academy"
version = "2.0.0"
description = "A desktop application for speed reading and cognitive training"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
