[project]
name = "neural-speed-academy"
version = "1.0.0"
description = "A desktop application for speed reading and cognitive training"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
